# sound_processor

./: .gitignore  CMakeLists.txt  README.md
sound_processor/: CMakeLists.txt  copy.txt  теория.txt
sound_processor/sound_processor_tests/: test_args_parser.cpp  test_filters.cpp
sound_processor/src/: application.cpp  application.h  args_parser.cpp  args_parser.h  converter.cpp  converter.h  filter_producers.h  main.cpp  pipeline.h  sound_processor  wav_io.cpp  wav_io.h  waveform.cpp  waveform.h
sound_processor/src/filters/: mix_filter.h  normalize_filter.h  silence_filter.h  timestretch_filter.h
sound_processor_1/: CMakeLists.txt  class_diagram.md  defense_notes.txt  тз.txt
sound_processor_1/sound_processor_tests/: test_waveform.cpp
sound_processor_1/src/: converter.cpp  converter.h  filter.h  filter_producers.h  main.cpp  pipeline.cpp
sound_processor_1/src/app/: application.cpp  main.cpp
sound_processor_1/src/converter/: converter.cpp
sound_processor_1/src/filter_producers/: filter_producers.h
sound_processor_1/src/filters/: ampl_filter.h  bandpass_filter.h  gain_filter.h  generator_filters.h  lowpass_filter.h  mix_filter.h  mute_filter.h  normalize_filter.h  reject_filter.h  silence_filter.h
sound_processor_1/src/pipeline/: pipeline.cpp  pipeline.h
sound_processor_1/src/wav/: wav_io.cpp
sound_processor_1/tests/sound_processor_tests/: test_args_parser.cpp  test_filters.cpp  test_main.cpp  test_pipeline.cpp  test_wav_io.cpp  test_waveform.cpp
tasks/: CMakeLists.txt
tasks/sound_processor/: CMakeLists.txt  defense_notes.txt
tasks/sound_processor/own_tests/scripts/: run_filter_demo.sh
tasks/sound_processor/src/app/: application.cpp  application.h
tasks/sound_processor/src/args/: args_parser.cpp
tasks/sound_processor/src/converter/: converter.cpp  converter.h
tasks/sound_processor/src/filter/: filter.h
tasks/sound_processor/src/filter_producers/: filter_producers.cpp  filter_producers.h
tasks/sound_processor/src/filters/: ampl_filter.cpp  ampl_filter.h  bandpass_filter.cpp  bandpass_filter.h  generator_filters.cpp  generator_filters.h  highpass_filter.cpp  highpass_filter.h  lowpass_filter.cpp  lowpass_filter.h  mix_filter.cpp  mix_filter.h  mute_filter.cpp  mute_filter.h  normalize_filter.cpp  normalize_filter.h  reject_filter.cpp  reject_filter.h  silence_filter.cpp  silence_filter.h  timestretch_filter.cpp  timestretch_filter.h
tasks/sound_processor/src/pipeline/: pipeline.h
tasks/sound_processor/src/wav/: wav_headers.h  wav_io.cpp  wav_io.h
tasks/sound_processor/src/waveform/: waveform.cpp
tasks/sound_processor/tests/sound_processor_tests/: test_args_parser.cpp  test_filters.cpp  test_main.cpp  test_pipeline.cpp  test_wav_io.cpp  test_waveform.cpp
